--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     compile group: 'com.h2database', name: 'h2', version: '1.4.189'
     compile group: 'org.javalite', name: 'activejdbc', version: '1.4.12-SNAPSHOT'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.5'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.5'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
